--- a/service-items-dev.properties
+++ b/service-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando ambiente Desarrollo
-configuracion.autor.nombre=Facundo
-configuracion.autor.email=martinez@gmail.com
+configuracion.texto=Configurando entorno de Desarrollo...
+configuracion.autor.nombre=BrocaGenious
+configuracion.autor.email=developer@gmail.com
