add server names for mysql and postgres

--- a/service-users-dev.properties
+++ b/service-users-dev.properties
@@ -1,6 +1,6 @@
 #Configuracion de MySQL
 #1 url
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_springboot_cloud
+spring.datasource.url=jdbc:postgresql://microservices-postgres12:5432/db_springboot_cloud
 #&allowPublicKeyRetrieval=true&useSSL=false
 #2 username
 spring.datasource.username=postgres
