--- a/service-users-dev.properties
+++ b/service-users-dev.properties
@@ -1,4 +1,4 @@
-#Configuracion de MySQL
+#Configuracion de Postgres
 #1 url
 spring.datasource.url=jdbc:postgresql://microservices-postgres12:5433/db_springboot_cloud
 #&allowPublicKeyRetrieval=true&useSSL=false
